# ComfyUI-Video-Frame-Extractor

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  video_frame_extractor.py
examples/: README.md
web/js/: video_frame_extractor.js
workflows/: ComfyUI-Attic--Video-Frame-Extractor-Workflow.json  README.md
